--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <testng.version>7.3.0</testng.version>
         <log4j.version>2.14.0</log4j.version>
         <webdrivermanager.version>4.0.0</webdrivermanager.version>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -165,8 +165,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
                 <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <!--
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>enable-preview</compilerArgs>
+                    -->
                 </configuration>
             </plugin>
             <plugin>
