--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,10 @@
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.surefire.version>3.0.0-M5</maven.surefire.version>
         <io.cucumber.version>6.8.2</io.cucumber.version>
+        <!--
         <selenium.version>3.141.59</selenium.version>
+        -->
+        <selenium.version>4.0.0-beta-1</selenium.version>     
         <testng.version>7.3.0</testng.version>
         <log4j.version>2.14.0</log4j.version>
         <webdrivermanager.version>4.0.0</webdrivermanager.version>
